--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,4 +34,10 @@
         <item name="backgroundTint">@color/secondary</item>
     </style>
 
+    <style name="LoginButtonIcon" parent="Widget.Material3.Button.IconButton.Filled">
+        <item name="android:background">@drawable/btn_bg</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
 </resources>
