--- a/app/src/main/res/layout/view_bottom.xml
+++ b/app/src/main/res/layout/view_bottom.xml
@@ -1,33 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background"
     android:paddingBottom="16dp">
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/otherLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:text="@string/login_with"
-        android:textColor="@color/secondary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/iconButton"
-        style="@style/LoginButtonIcon"
-        android:layout_marginTop="8dp"
-        app:backgroundTint="@null"
-        app:icon="@drawable/ic_google"
-        app:iconTint="@null"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/otherLogin" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvMsgViewBottom"
@@ -35,12 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="@string/msg_sign_in"
+        android:text="¡Únete a GymPartner!"
         android:textColor="@color/secondary"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iconButton"
-        tools:text="@string/msg_sign_in" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvActionBottom"
@@ -48,12 +23,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:text="Prueba"
+        android:text="Cada dia más fuerte"
         android:textColor="@color/primary"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iconButton"
-        tools:text="@string/iniciar_sesion" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
