--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,8 +34,10 @@
         <item name="backgroundTint">@color/secondary</item>
     </style>
 
-    <style name="LoginButtonIcon" parent="Widget.Material3.Button.IconButton.Filled">
+    <style name="LoginGoogleButton" parent="Widget.Material3.Button.IconButton.Filled">
+        <item name="android:textSize">16sp</item>
         <item name="android:background">@drawable/btn_bg</item>
+        <item name="android:textColor">@color/primary</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
     </style>
