--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,27 @@
 
     <style name="Theme.GymPartner" parent="Base.Theme.GymPartner" />
 
+    <!--Splash for android >= 12.-->
+    <style name="Theme.GymPartner.Starting" parent="Base.Theme.GymPartner">
+        <!--Set the splash screen background, animated icon, and animation duration.-->
+        <item name="windowSplashScreenBackground">@color/primary</item>
+
+        <!--Use windowSplashScreenAnimatedIcon to add either a drawable or an-->
+        <!--animated drawable. One of these is required.-->
+        <item name="windowSplashScreenAnimatedIcon">@drawable/little_logo</item>
+        <item name="windowSplashScreenAnimationDuration">200</item>
+        <!--Required for animated icons-->
+
+        <!--Set the theme of the Activity that directly follows your splash screen.-->
+        <item name="postSplashScreenTheme">@style/Theme.GymPartner</item>
+        <!--Required.-->
+    </style>
+
+    <!--Splash for android < 12.-->
+    <style name="Theme.GymPartner.Splash" parent="Base.Theme.GymPartner">
+        <item name="android:windowBackground">@drawable/splash_bg</item>
+    </style>
+
     <!-- Buttons -->
     <style name="PrimaryButton" parent="Widget.Material3.Button.IconButton.Filled.Tonal">
         <item name="android:textSize">12sp</item>
