--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,11 @@
     <color name="error">#e84545</color>
     <color name="error_dark">#d32f2f</color>
 
+    <!-- Primaries colors -->
+    <color name="white">#fff</color>
+    <color name="black">#000000</color>
+    <color name="red">#FF0000</color>
+    <color name="blue">#0022FF</color>
+    <color name="yellow">#FFE500</color>
+
 </resources>
