--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -63,4 +63,21 @@
         <item name="android:layout_width">wrap_content</item>
     </style>
 
+    <style name="TextInformation" parent="Base.Theme.GymPartner">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/secondary</item>
+        <item name="android:ellipsize">none</item>
+        <item name="android:maxLines">3</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+    </style>
+
+
+    <!-- Dialog Loading Style -->
+    <style name="TransparentDialog" parent="ThemeOverlay.MaterialComponents.Dialog">
+        <item name="android:backgroundDimAmount">0.65</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
+
 </resources>
